ingress-nginx.yaml
# ingress-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
# Add additional configurations for the ingress controller
