sqlwebapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlpad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlpad
  template:
    metadata:
      labels:
        app: sqlpad
    spec:
      containers:
      - name: sqlpad
        image: sqlpad/sqlpad:latest  # Using SQLPad image from Docker Hub
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sqlpad-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: sqlpad
