ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  defaultBackend:
    service:
      name: hello-world
      port:
        number: 80
